--- a/UTF-8part1_roth copy.ipynb
+++ b/UTF-8part1_roth copy.ipynb
@@ -129,7 +129,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "c30c9905-0b55-4f9c-a700-9f167e04fed5",
+       "ref": "60cfade4-bd73-42e8-acb5-9e465b2a8544",
        "rows": [
         [
          "0",
@@ -568,7 +568,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sebal\\AppData\\Local\\Temp\\ipykernel_19492\\1819701092.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\sebal\\AppData\\Local\\Temp\\ipykernel_25048\\1819701092.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +662,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest 0.6589\n",
+      "Random Forest 0.6567\n",
       "Decision Tree 0.6632\n"
      ]
     }
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1196,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1214,119 +1214,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Tensor' object has no attribute 'to_numpy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[20], line 31\u001b[0m\n\u001b[0;32m     29\u001b[0m Xs_train \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(Xs_train, dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mfloat32)\n\u001b[0;32m     30\u001b[0m Xs_test \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(Xs_test, dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mfloat32)\n\u001b[1;32m---> 31\u001b[0m y_train \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(y_train\u001b[38;5;241m.\u001b[39mto_numpy(), dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mfloat32)  \u001b[38;5;66;03m# Convert DataFrame to NumPy array\u001b[39;00m\n\u001b[0;32m     32\u001b[0m y_test \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(y_test\u001b[38;5;241m.\u001b[39mto_numpy(), dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mfloat32)    \u001b[38;5;66;03m# Convert DataFrame to NumPy array\u001b[39;00m\n\u001b[0;32m     34\u001b[0m \u001b[38;5;66;03m# Training loop\u001b[39;00m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Tensor' object has no attribute 'to_numpy'"
-     ]
-    }
-   ],
-   "source": [
-    "# Define the model\n",
-    "class SequentialModel(nn.Module):\n",
-    "    def __init__(self, input_dim):\n",
-    "        super(SequentialModel, self).__init__()\n",
-    "        self.dense1 = nn.Linear(in_features=input_dim, out_features=32)  # Adjust in_features to match dataset\n",
-    "        self.dense2 = nn.Linear(in_features=32, out_features=32)\n",
-    "        self.dense3 = nn.Linear(in_features=32, out_features=4)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = torch.relu(self.dense1(x))\n",
-    "        x = torch.relu(self.dense2(x))\n",
-    "        x = torch.softmax(self.dense3(x), dim=1)\n",
-    "        return x\n",
-    "\n",
-    "# Initialize the model with the correct input dimension\n",
-    "input_dim = X_train.shape[1]\n",
-    "model = SequentialModel(input_dim)\n",
-    "\n",
-    "# Define the optimizer and loss function\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
-    "criterion = nn.MSELoss()\n",
-    "\n",
-    "# Example of using StandardScaler\n",
-    "scaler = StandardScaler()\n",
-    "Xs_train = scaler.fit_transform(X_train)\n",
-    "Xs_test = scaler.transform(X_test)\n",
-    "\n",
-    "# Convert the data to PyTorch tensors\n",
-    "Xs_train = torch.tensor(Xs_train, dtype=torch.float32)\n",
-    "Xs_test = torch.tensor(Xs_test, dtype=torch.float32)\n",
-    "y_train = torch.tensor(y_train.to_numpy(), dtype=torch.float32)  # Convert DataFrame to NumPy array\n",
-    "y_test = torch.tensor(y_test.to_numpy(), dtype=torch.float32)    # Convert DataFrame to NumPy array\n",
-    "\n",
-    "# Training loop\n",
-    "epochs = 50\n",
-    "batch_size = 128\n",
-    "\n",
-    "for epoch in range(epochs):\n",
-    "    model.train()\n",
-    "    for i in range(0, len(Xs_train), batch_size):\n",
-    "        X_batch = Xs_train[i:i+batch_size]\n",
-    "        y_batch = y_train[i:i+batch_size]\n",
-    "\n",
-    "        optimizer.zero_grad()\n",
-    "        outputs = model(X_batch)\n",
-    "        loss = criterion(outputs, y_batch)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "\n",
-    "    # Validation\n",
-    "    model.eval()\n",
-    "    with torch.no_grad():\n",
-    "        val_outputs = model(Xs_test)\n",
-    "        val_loss = criterion(val_outputs, y_test)\n",
-    "    print(f'Epoch {epoch+1}/{epochs}, Loss: {loss.item()}, Validation Loss: {val_loss.item()}')\n",
-    "\n",
-    "# Predict values for training and test sets\n",
-    "model.eval()\n",
-    "with torch.no_grad():\n",
-    "    y_mlp_train = torch.argmax(model(Xs_train), axis=1).numpy()\n",
-    "    y_mlp = torch.argmax(model(Xs_test), axis=1).numpy()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from keras.datasets import california_housing\n",
     "\n",
-    "# Define the model\n",
     "class SequentialModel(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(SequentialModel, self).__init__()\n",
-    "        self.dense1 = nn.Linear(in_features=10, out_features=64) # Adjust in_features and out_features as needed\n",
-    "        self.dense2 = nn.Linear(in_features=64, out_features=32)\n",
-    "        self.dense3 = nn.Linear(in_features=32, out_features=1)\n",
+    "        self.layer1 = nn.Linear(in_features=10, out_features=20)\n",
+    "        self.layer2 = nn.Linear(in_features=20, out_features=1)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = torch.relu(self.dense1(x))\n",
-    "        x = torch.relu(self.dense2(x))\n",
-    "        x = self.dense3(x)\n",
+    "        x = torch.relu(self.layer1(x))\n",
+    "        x = self.layer2(x)\n",
     "        return x\n",
     "\n",
-    "# Initialize the model\n",
-    "model = SequentialModel()\n",
-    "\n",
-    "# Example of using StandardScaler\n",
-    "scaler = StandardScaler()\n",
-    "# Assuming you have some data in 'data'\n",
-    "scaled_data = scaler.fit_transform(encoded_data)\n"
+    "model = SequentialModel\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NeuralNetwork(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(NeuralNetwork, self).__init__()\n",
+    "        self.layer1 = nn.Linear(in_features=13, out_features=20)\n",
+    "        self.layer2 = nn.Linear(in_features=20, out_features=10)\n",
+    "        self.output = nn.Linear(in_features=10, out_features=1)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = torch.relu(self.layer1(x))\n",
+    "        x = torch.relu(self.layer2(x))\n",
+    "        x = self.output(x)\n",
+    "        return x\n",
+    "\n",
+    "model = NeuralNetwork()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1338,92 +1269,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'values'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[23], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m Xs_test \u001b[38;5;241m=\u001b[39m scaler\u001b[38;5;241m.\u001b[39mtransform(X_test)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# Convert the data to PyTorch tensors\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m Xs_train \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(Xs_train\u001b[38;5;241m.\u001b[39mvalues, dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mfloat32)\n\u001b[0;32m      8\u001b[0m Xs_test \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(Xs_test\u001b[38;5;241m.\u001b[39mvalues, dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mfloat32)\n\u001b[0;32m      9\u001b[0m y_train \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(y_train, dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mfloat32)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'values'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [10/100], Loss: 0.0932\n",
+      "Epoch [20/100], Loss: 0.0925\n",
+      "Epoch [30/100], Loss: 0.0920\n",
+      "Epoch [40/100], Loss: 0.0916\n",
+      "Epoch [50/100], Loss: 0.0912\n",
+      "Epoch [60/100], Loss: 0.0908\n",
+      "Epoch [70/100], Loss: 0.0904\n",
+      "Epoch [80/100], Loss: 0.0900\n",
+      "Epoch [90/100], Loss: 0.0897\n",
+      "Epoch [100/100], Loss: 0.0894\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "# Example of using StandardScaler\n",
-    "scaler = StandardScaler()\n",
-    "Xs_train = scaler.fit_transform(X_train)\n",
-    "Xs_test = scaler.transform(X_test)\n",
+    "# Example data\n",
+    "encoded_data = np.random.rand(50000, 13)\n",
+    "X_train = torch.tensor(encoded_data, dtype=torch.float32)\n",
+    "y_train = torch.tensor(np.random.rand(50000, 1), dtype=torch.float32)\n",
     "\n",
-    "# Convert the data to PyTorch tensors\n",
-    "Xs_train = torch.tensor(Xs_train.values, dtype=torch.float32)\n",
-    "Xs_test = torch.tensor(Xs_test.values, dtype=torch.float32)\n",
-    "y_train = torch.tensor(y_train, dtype=torch.float32)\n"
+    "# Training loop\n",
+    "epochs = 100\n",
+    "for epoch in range(epochs):\n",
+    "    model.train()\n",
+    "    optimizer.zero_grad()  # Zero the gradients\n",
+    "    outputs = model(X_train)\n",
+    "    loss = criterion(outputs, y_train)\n",
+    "    loss.backward()  # Backpropagation\n",
+    "    optimizer.step()  # Update the weights\n",
+    "\n",
+    "    if (epoch+1) % 10 == 0:\n",
+    "        print(f'Epoch [{epoch+1}/{epochs}], Loss: {loss.item():.4f}')\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Sequential' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[24], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Build the neural network model\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m mlp \u001b[38;5;241m=\u001b[39m Sequential([\n\u001b[0;32m      3\u001b[0m     Dense(\u001b[38;5;241m8\u001b[39m, activation\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrelu\u001b[39m\u001b[38;5;124m'\u001b[39m, input_shape\u001b[38;5;241m=\u001b[39m(X_train\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m],)),\n\u001b[0;32m      4\u001b[0m     Dense(\u001b[38;5;241m32\u001b[39m, activation\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrelu\u001b[39m\u001b[38;5;124m'\u001b[39m),\n\u001b[0;32m      5\u001b[0m     Dense(\u001b[38;5;241m4\u001b[39m, activation \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msoftmax\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      6\u001b[0m ])\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# Compile the model\u001b[39;00m\n\u001b[0;32m      9\u001b[0m mlp\u001b[38;5;241m.\u001b[39mcompile(optimizer\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124madam\u001b[39m\u001b[38;5;124m'\u001b[39m, loss\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmse\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Sequential' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.5659],\n",
+      "        [0.3746],\n",
+      "        [0.4960],\n",
+      "        [0.6018],\n",
+      "        [0.4746],\n",
+      "        [0.3048],\n",
+      "        [0.4718],\n",
+      "        [0.4101],\n",
+      "        [0.3008],\n",
+      "        [0.4820],\n",
+      "        [0.5337],\n",
+      "        [0.5313],\n",
+      "        [0.3868],\n",
+      "        [0.5411],\n",
+      "        [0.4099],\n",
+      "        [0.5301],\n",
+      "        [0.5649],\n",
+      "        [0.4638],\n",
+      "        [0.3704],\n",
+      "        [0.4501]])\n"
      ]
     }
    ],
    "source": [
-    "# Build the neural network model\n",
-    "mlp = Sequential([\n",
-    "    Dense(8, activation='relu', input_shape=(X_train.shape[1],)),\n",
-    "    Dense(32, activation='relu'),\n",
-    "    Dense(4, activation = 'softmax')\n",
-    "])\n",
     "\n",
-    "# Compile the model\n",
-    "mlp.compile(optimizer='adam', loss='mse')\n",
+    "# Example test data with 13 features\n",
+    "X_test = torch.tensor(np.random.rand(20, 13), dtype=torch.float32)\n",
     "\n",
-    "ss = StandardScaler()\n",
-    "Xs_train = ss.fit_transform(X_train)\n",
-    "Xs_test = ss.transform(X_test)\n",
-    "\n",
-    "# Train the model\n",
-    "mlp.fit(Xs_train, y_train, epochs=50, batch_size=128, validation_split=0.2, verbose=0)\n",
-    "\n",
-    "# Predict values for training and test sets\n",
-    "y_mlp_train = np.argmax(mlp.predict(Xs_train), axis = 1)\n",
-    "y_mlp = np.argmax(mlp.predict(Xs_test), axis = 1)\n"
+    "# Predictions\n",
+    "with torch.no_grad():\n",
+    "    predictions = model(X_test)\n",
+    "    print(predictions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.3318"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "RuntimeError",
+     "evalue": "The size of tensor a (20) must match the size of tensor b (10000) at non-singleton dimension 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[30], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m predicted_classes \u001b[38;5;241m=\u001b[39m (predictions \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0.5\u001b[39m)\u001b[38;5;241m.\u001b[39mfloat()\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Calculate accuracy\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m accuracy \u001b[38;5;241m=\u001b[39m (predicted_classes\u001b[38;5;241m.\u001b[39mflatten() \u001b[38;5;241m==\u001b[39m y_test\u001b[38;5;241m.\u001b[39mflatten())\u001b[38;5;241m.\u001b[39mfloat()\u001b[38;5;241m.\u001b[39mmean()\u001b[38;5;241m.\u001b[39mitem()\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAccuracy: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00maccuracy\u001b[38;5;250m \u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;250m \u001b[39m\u001b[38;5;241m100\u001b[39m\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: The size of tensor a (20) must match the size of tensor b (10000) at non-singleton dimension 0"
+     ]
     }
    ],
    "source": [
-    "accuracy_score(y_mlp, y_test)"
+    "# Convert predictions to binary (0 or 1) based on a threshold (e.g., 0.5)\n",
+    "predicted_classes = (predictions > 0.5).float()\n",
+    "\n",
+    "# Calculate accuracy\n",
+    "accuracy = (predicted_classes.flatten() == y_test.flatten()).float().mean().item()\n",
+    "print(f'Accuracy: {accuracy * 100:.2f}%')"
    ]
   },
   {
