--- a/Final Code For Project.ipynb
+++ b/Final Code For Project.ipynb
@@ -124,7 +124,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "148ad6e2-6563-41e5-a68c-08801ef44046",
+       "ref": "6bdfa636-7894-43cf-a9b8-994de886eb75",
        "rows": [
         [
          "0",
@@ -465,22 +465,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Below I have a first attempt section and another try, different ways of formulating the problem. You should only run one section; meaning if you are trying the 'first attempt', skip 'another try' and vice versa. Then pick up where you left off at Modeling.\n",
-    "\n",
-    "# First Attempt - Prof Roth\n",
-    "\n",
-    "The changes I made:\n",
-    " - I made the target Severity. That's what I understood from May.\n",
-    " - I included Age and Gender as features.\n",
-    " - I fixed the columnTransformer (which I introduced broken). I was applying the columnTransformer only to the ordinal features, but you are supposed to pass in the entire feature set; it knows which columns to apply the ordinal transformer to.\n",
-    "\n",
-    " I manage to get around 50%, which for a 4-class classification is 2x better than chance.\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -544,17 +528,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Another try\n",
-    "\n",
-    "This time, I've made the problem binary. Severity of NA or Low are 0, and Medium and High are 1.\n",
-    "\n",
-    "I get 66% accuracy. That's not better, because in a binary classification, random choice is 50%."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -563,7 +536,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sebal\\AppData\\Local\\Temp\\ipykernel_23928\\1819701092.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\sebal\\AppData\\Local\\Temp\\ipykernel_10360\\1819701092.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -775,8 +748,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Package                           VersionNote: you may need to restart the kernel to use updated packages.\n",
-      "\n",
+      "Package                           Version\n",
       "--------------------------------- ------------------\n",
       "absl-py                           2.2.2\n",
       "aext-assistant                    4.1.0\n",
@@ -1181,7 +1153,8 @@
       "zict                              3.0.0\n",
       "zipp                              3.17.0\n",
       "zope.interface                    5.4.0\n",
-      "zstandard                         0.22.0\n"
+      "zstandard                         0.22.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
